--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>CodePen - WebGL water ripples</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
+
     <link href="https://fonts.googleapis.com/css2?family=Rakkas&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 
