--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
     <canvas id="canvas" width="500" height="500"></canvas>
- <audio src="" autoplay="yes">
+ <audio src="./Abba - Happy New Year.mp3" autoplay="yes">
     <script>
         var img = new Image();
 
