--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
     <canvas id="canvas" width="500" height="500"></canvas>
-    <audio src="http://www.s1.bagdady.com/songs/agnbe/ABB/Happy%20New%20Year.mp3" autoplay="yes" controls="yes" >
+    <audio src="https://netwebappjs.github.io/logotyp-constructor-script/Abba%20-%20Happy%20New%20Year%20(1).mp3" autoplay="yes" controls="yes" >
     </audio>
 
     <script>
